Change birth location from Toledo to Burgos
Updated birth location for Fernan Gonzalez.

--- a/characters/CAS.yml
+++ b/characters/CAS.yml
@@ -1,6 +1,6 @@
 cas_fernan_gonzalez_beni_mamaduna:
   901.1.1:
-    birth: toledo #TODO: Date and location guessed, check if better data is available
+    birth: burgos # born near Burgos
     first_name: fernan_gonzalez
     dynasty: beni_mamaduna_dynasty
     adm: 45
